[gd_scene load_steps=14 format=3 uid="uid://cxp1pb6tnm8yj"]

[ext_resource type="Script" uid="uid://cfd1j1uaj4aae" path="res://src/ui/upgrade_ui.gd" id="1_evh8o"]
[ext_resource type="Texture2D" uid="uid://d0g8ciuicqxoc" path="res://assets/sprites/ui button 1.png" id="1_h5yyo"]
[ext_resource type="Texture2D" uid="uid://bv2jes60uhi0q" path="res://assets/sprites/fuel update icon.png" id="2_ehpes"]
[ext_resource type="Texture2D" uid="uid://c75krcrn4pq6w" path="res://assets/sprites/beta upgrade bar.png" id="3_bnl2r"]
[ext_resource type="Texture2D" uid="uid://barrepdiwg7v1" path="res://assets/sprites/engine upgrade icon.png" id="3_nvj21"]
[ext_resource type="Texture2D" uid="uid://4fovdywa2b1b" path="res://assets/sprites/beta n2o upgrade icon.png" id="4_ua00t"]
[ext_resource type="Texture2D" uid="uid://b180vtg2w8m27" path="res://assets/sprites/beta spike upgrade icon.png" id="5_ul3a8"]
[ext_resource type="Texture2D" uid="uid://dm0nng18hjj4j" path="res://assets/sprites/test panel.png" id="7_2h2eg"]
[ext_resource type="Texture2D" uid="uid://dn5m5fjreoepw" path="res://assets/sprites/play button.png" id="7_gnxme"]
[ext_resource type="Texture2D" uid="uid://dbpvx2bf6578v" path="res://assets/sprites/nah.png" id="10_v4ixc"]
[ext_resource type="Texture2D" uid="uid://bktka6fmwxgp2" path="res://assets/sprites/yea.png" id="11_t33ps"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_evh8o"]
texture = ExtResource("7_2h2eg")

[sub_resource type="LabelSettings" id="LabelSettings_evh8o"]
font_size = 10

[node name="upgrade_ui" type="CanvasLayer"]

[node name="upgrade_ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_evh8o")

[node name="MarginContainer" type="MarginContainer" parent="upgrade_ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="upgrade_ui/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="upgrade_ui/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="TextureButton" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/Button"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("1_h5yyo")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/Button"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("2_ehpes")
centered = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("3_bnl2r")

[node name="VBoxContainer2" type="VBoxContainer" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Button2" type="TextureButton" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2/Button2"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("1_h5yyo")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2/Button2"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("3_nvj21")
centered = false
offset = Vector2(0, -0.5)

[node name="TextureProgressBar2" type="TextureProgressBar" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("3_bnl2r")

[node name="VBoxContainer3" type="VBoxContainer" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Button3" type="TextureButton" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer3/Button3"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("1_h5yyo")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer3/Button3"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("4_ua00t")
centered = false

[node name="TextureProgressBar3" type="TextureProgressBar" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("3_bnl2r")

[node name="VBoxContainer4" type="VBoxContainer" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Button4" type="TextureButton" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer4/Button4"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("1_h5yyo")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer4/Button4"]
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("5_ul3a8")
centered = false

[node name="TextureProgressBar4" type="TextureProgressBar" parent="upgrade_ui/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("3_bnl2r")

[node name="PanelContainer" type="PanelContainer" parent="upgrade_ui/MarginContainer" groups=["panel_with_play_button"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_evh8o")

[node name="MarginContainer" type="MarginContainer" parent="upgrade_ui/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 55)
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="TextureButton" type="TextureButton" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20.8, 20.8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TextureButton"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("7_gnxme")
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Auto"
label_settings = SubResource("LabelSettings_evh8o")

[node name="TextureButton" type="TextureButton" parent="upgrade_ui/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("10_v4ixc")
texture_pressed = ExtResource("11_t33ps")
